--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@
 title: Ramblings on Stuff
 email: khansubhan95@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Thoughts on Software and Hardware.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mskhan.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: khansubhan95
 github_username:  khansubhan95
 
@@ -32,6 +30,10 @@ plugins:
 collections:
   - projects
 include: [_redirects]
+
+name: Ramblings on Stuff
+feed_items: 15
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
