--- a/_data/projectlist.yml
+++ b/_data/projectlist.yml
@@ -34,12 +34,12 @@ docs:
   description: An image hosting application with basic pinterest functionality. Consists of twitter based authentication.
   stack: Node.js, Express, Mongoose, MongoDB
 
-- name: Django Social Network
-  github_link: https://github.com/khansubhan95/django-social-network
-  live_link: https://khansubhan95.pythonanywhere.com/
-  image: /assets/uploads/2019/django-social-network.png
-  description: A Django application with user authentication and email backend that allows users make posts with images.
-  stack: Django, PostgreSQL
+# - name: Django Social Network
+#   github_link: https://github.com/khansubhan95/django-social-network
+#   live_link: https://khansubhan95.pythonanywhere.com/
+#   image: /assets/uploads/2019/django-social-network.png
+#   description: A Django application with user authentication and email backend that allows users make posts with images.
+#   stack: Django, PostgreSQL
 
 
 
