--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Ramblings on Stuff
+title: Thoughts on Stuff
 email: khansubhan95@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Thoughts on Software and Hardware.
