--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: khansubhan95@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Thoughts on Software and Hardware.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://mskhan.me" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mskhan.in" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: khansubhan95
 github_username:  khansubhan95
 
